loopdowhile.Poucet1.scala.error
Compilation error:
Poucet1:10: error: missing parameter type
  if (biscuit=>3) {
      ^Poucet1:13: error: value =< is not a member of Int
  if (biscuit=<2) {
             ^